--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "final-project",
+    "name": "Boolean Bonanza",
     "version": "4.0.0",
-    "description": "Phaser 3 Final Project",
-    "homepage": "https://github.com/UD-S24-CISC374/final-project-template#readme",
+    "description": "Boolean Bonanza Game",
+    "homepage": "https://github.com/UD-S24-CISC374/final-project-teal/edit/main/README.md",
     "main": "index.js",
     "scripts": {
         "start": "webpack serve --config webpack/webpack.dev.js",
