--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "Boolean Bonanza",
+    "name": "boolean-bonanza",
     "version": "4.0.0",
     "description": "Boolean Bonanza Game",
-    "homepage": "https://github.com/UD-S24-CISC374/final-project-teal/edit/main/README.md",
+    "homepage": "https://github.com/UD-S24-CISC374/final-project-teal#readme",
     "main": "index.js",
     "scripts": {
         "start": "webpack serve --config webpack/webpack.dev.js",
